# Minecrust

./: .envrc  .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml  watch.sh
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/codec/: Cargo.toml
crates/codec/src/: crypto.rs  decoder.rs  encoder.rs  lib.rs  packet.rs
crates/codec/src/crypto/: cfb8.rs  decryption.rs  encryption.rs  mod.rs
crates/codec/src/frame/: decoder.rs  mod.rs
crates/codec/src/packet/: decoder.rs
crates/codec/src/pipeline/: inbound.rs  mod.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: connection.rs  lib.rs  main.rs
crates/gateway/src/dispatcher/: mod.rs  unversioned.rs  v773.rs
crates/macro/: Cargo.toml
crates/macro/src/: deserializer.rs  lib.rs  registry.rs  serializer.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: deserialize.rs  error.rs  lib.rs  serialize.rs
crates/protocol/src/datatype/: game_profile.rs  intent.rs  mod.rs  text_component.rs  var_int.rs  var_long.rs
crates/protocol/src/packet/: mod.rs
crates/protocol/src/packet/unversioned/: server.rs
crates/protocol/src/packet/v773/client/: login.rs  status.rs
crates/protocol/src/packet/v773/server/: login.rs  status.rs
crates/protocol/src/packets/: mod.rs  outgoing.rs
crates/protocol/src/packets/incoming/: handshaking.rs  mod.rs  status.rs
crates/protocol/src/packets/outgoing/: status.rs
crates/protocol/src/packets/v773/: incoming.rs  mod.rs  outgoing.rs
crates/protocol_macro/: Cargo.toml
crates/protocol_macro/src/: deserializer.rs  lib.rs  serializer.rs
crates/server/: Cargo.toml
crates/server/src/: codec.rs  connection.rs  handler.rs  main.rs
crates/server/src/dispatcher/: v773.rs
