[workspace]
members = ["crates/*"]
resolver = "3"

[profile.dev.package.num-bigint-dig]
opt-level = 3

[workspace.dependencies]
minecrust_protocol_macro = { path = "./crates/protocol_macro" }
minecrust_protocol = { path = "./crates/protocol" }
minecrust_codec = { path = "./crates/codec" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tokio-stream = "0.1.18"
etcd-client = "0.17.0"
tokio-util = { version = "0.7.17", features = ["rt"] }
thiserror = "2.0.17"
arc-swap = "1.7.1"
tracing = "0.1.43"
futures = { version = "0.3.31" }
flate2 = "1.1.5"
bytes = "1.11.0"
tokio = "1.48.0"
rand = "=0.8.5"
uuid = "1.19.0"
rsa = "=0.9.9"
aes = "0.8.4"
cipher = "0.4.4"
