[package]
name = "minecrust_codec"
version = "0.1.0"
edition = "2024"

[dependencies]
minecrust_protocol = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
thiserror = { workspace = true }
tracing = { workspace = true }
flate2 = { workspace = true }
cipher = { workspace = true }
bytes = { workspace = true }
aes = { workspace = true }
