[package]
name = "minecrust_gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
minecrust_protocol = { workspace = true }
minecrust_codec = { workspace = true }
tokio-stream = { workspace = true }
etcd-client = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
thiserror = { workspace = true }
arc-swap = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true }
